syntax = "proto3";

package awakari.conditions.kiwi;

option go_package = "./api/grpc/kiwiTree";

import "google/protobuf/empty.proto";

service Service {
  rpc Create(KeyPatternRequest) returns (google.protobuf.Empty);
  rpc LockCreate(KeyPatternRequest) returns (google.protobuf.Empty);
  rpc UnlockCreate(KeyPatternRequest) returns (google.protobuf.Empty);
  rpc Delete(KeyPatternRequest) returns (google.protobuf.Empty);
}

message KeyPatternRequest {
  string key = 1;
  string pattern = 2;
}
